# maius-program-library

./: .gitignore  Anchor.toml  Anchor.toml.sample  package.json
programs/maius-program-library/: Cargo.toml
programs/maius-program-library/src/: constants.rs  lib.rs
programs/maius-program-library/src/instructions/: initialize_customer.rs  initialize_invoice.rs  initialize_invoice_item.rs  initialize_price.rs  initialize_product.rs  initialize_subscription.rs  initialize_subscription_item.rs  mod.rs  update_customer.rs
programs/maius-program-library/src/instructions/customer/: delete_customer.rs  errors.rs  initialize_customer.rs  mod.rs  update_customer.rs
programs/maius-program-library/src/instructions/escrow_account/: initialize_escrow_account.rs  mod.rs  transfer_for_merchant.rs
programs/maius-program-library/src/instructions/invoice/: initialize_customer_invoice.rs  initialize_invoice.rs  mod.rs  update_invoice.rs
programs/maius-program-library/src/instructions/invoice_item/: initialize_invoice_item.rs  mod.rs
programs/maius-program-library/src/instructions/merchant/: initialize_merchant.rs  mod.rs  update_merchant.rs
programs/maius-program-library/src/instructions/price/: errors.rs  initialize_accepted_tokens.rs  initialize_price.rs  mod.rs  update_price.rs
programs/maius-program-library/src/instructions/product/: mod.rs  (+3 more)
programs/maius-program-library/src/schemas/: accepted_tokens.rs  customer.rs  customer_inovice.rs  escrow_account.rs  invoice.rs  invoice_item.rs  merchant.rs  mod.rs  price.rs  product.rs  subscription.rs  subscription_item.rs
(+106 files in other folders)
